written integration test for the game

--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,10 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.0.16.Final</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <version>2.1.7.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
